# FreeFlow

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
include/FSI_Simulator/utils/: NumericUtils.cuh
rl/: config_mapper.py  config_template_2d.json  dreamer_wrapper.py  plot_sac_vs_dreamer.py  sac.py  task.json  task_eel.json  test_dreamer_integration.py  train.py  train_dreamer.py
scripts/: vtk_to_video.py
src/lbm/: LbmUtilsFunc.cu
